refactor: remove /api root path
