# platform/server/controller/auth.go
@@ -47,7 +47,7 @@ func NewAuthController(
 // @Produce 		json
 // @Security 		ApiKeyAuth
 // @Param 			sid header string true "Session ID"
-// @Router 			/api/auth/me [get]
+// @Router 			/auth/me [get]
 func (c *AuthController) Me(ctx *fiber.Ctx) error {
 	return response.NewSuccessResponse(ctx, fiber.StatusOK, middleware.GetUserFromCtx(ctx))
 }
@@ -59,7 +59,7 @@ func (c *AuthController) Me(ctx *fiber.Ctx) error {
 // @Tags 				auth
 // @Accept 			json
 // @Produce 		json
-// @Router 			/api/auth/signin [post]
+// @Router 			/auth/signin [post]
 func (c *AuthController) SignIn(ctx *fiber.Ctx) error {
 	var payload payload.SignInPayload
 	if ok, err := c.validator.Validate(&payload, ctx); !ok {
@@ -86,7 +86,7 @@ func (c *AuthController) SignIn(ctx *fiber.Ctx) error {
 // @Description Get an url to signin with the Google account
 // @Tags 				auth
 // @Produce 		json
-// @Router 			/api/auth/google [get]
+// @Router 			/auth/google [get]
 func (c *AuthController) GetGoogleAuthUrl(ctx *fiber.Ctx) error {
 	return response.NewSuccessResponse(ctx, fiber.StatusOK, fiber.Map{
 		"url": c.googleUsecase.GetOAuthUrl(),
@@ -99,7 +99,7 @@ func (c *AuthController) GetGoogleAuthUrl(ctx *fiber.Ctx) error {
 // @Description A callback route for Google OAuth to redirect to after signing in
 // @Tags 				auth
 // @Produce 		json
-// @Router 			/api/auth/google/callback [get]
+// @Router 			/auth/google/callback [get]
 func (c *AuthController) SignInWithGoogle(ctx *fiber.Ctx) error {
 	code := ctx.Query("code")
 	ipAddress := ctx.IP()
@@ -127,7 +127,7 @@ func (c *AuthController) SignInWithGoogle(ctx *fiber.Ctx) error {
 // @Produce 		json
 // @Security 		ApiKeyAuths
 // @param 			sid header string true "Session ID"
-// @Router 			/api/auth/signout [get]
+// @Router 			/auth/signout [get]
 func (c *AuthController) SignOut(ctx *fiber.Ctx) error {
 	sid := ctx.Cookies(payload.AuthCookieKey)
 
